16 October 2017
---------------

- Fix bug where cell value in string and datetime value would try to compare arithmetically

11 October 2017
---------------
- Fix bug where `.xlsx` files not being picked up.
- Improved exception handling and bug fixes.

10 October 2017
---------------
- Handling cp1252 encoding coming through from Windows
- Added CHANGES.txt
- Minor bugfixes